--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@ img {vertical-align: middle;}
 
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
-          <img src="./../images/1200px-Football_iu_1996.jpg" style="width:100% ; height: 600px;">
+          <img src="./images/1200px-Football_iu_1996.jpg" style="width:100% ; height: 600px;">
           <div class="text">Caption Text</div>
         </div>
         
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
-          <img src="./../images/depositphotos_8307714-stock-photo-cricket-ball.jpg" style="width:100%; height: 600px;">
+          <img src="./images/depositphotos_8307714-stock-photo-cricket-ball.jpg" style="width:100%; height: 600px;">
           <div class="text">Caption Two</div>
         </div>
         
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
-          <img src="./../images/RHY4JDL4YBJ4NKAZTETG5EOG3M.jpg" style="width:100% ;height: 600px;">
+          <img src="./images/RHY4JDL4YBJ4NKAZTETG5EOG3M.jpg" style="width:100% ;height: 600px;">
           <div class="text">Caption Three</div>
         </div>
         </div>
