--- a/pages/header.html
+++ b/pages/header.html
@@ -63,7 +63,7 @@
         
             <ul class = "menu">
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">CRICKET</a></li>
+                <li><a href="../pages/cricket.html">CRICKET</a></li>
                 <li><a href="#">FOOTBALL</a></li>
                 <li><a href="#">HOCKEY</a></li>
                 <li><a href="#">TABLE TENNIS</a></li>
