--- a/pages/cricket.html
+++ b/pages/cricket.html
@@ -9,6 +9,8 @@
     <script src="../JS_files/cricket.js"></script>
 </head>
 <body>
-   
+   <div class="nav-bar">
+       
+   </div>
 </body>
 </html>
