--- a/pages/cricket.html
+++ b/pages/cricket.html
@@ -7,10 +7,24 @@
     <title>Sports Eye Cricket Live Updates</title>
     <link rel="stylesheet" href="../CSS_files/cricket.css">
     <script src="../JS_files/cricket.js"></script>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
    <div class="nav-bar">
-       
+       <ul class="list">
+           <li><a href="#">Domestic Matches</a></li>
+           <li><a href="#">International Matches</a></li>
+           <li><a href="#">Trending <i class="fa fa-fire"></i></a></li>
+           <li><a href="#">NEWS</a></li>
+           <li><a href="#">LIVE Score</a></li>
+       </ul>
    </div>
+
+   <div class="banner">
+       <p>Get Live Cricket Updates</p>
+       <p class="secondary">Click on above Links to get Started</p>
+   </div>
+
 </body>
 </html>
