--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ img {vertical-align: middle;}
             <ul class = "menu">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">CRICKET</a></li>
-                <li><a href="#">FOOTBALL</a></li>
+                <li><a href="./football/football.html">FOOTBALL</a></li>
                 <li><a href="#">HOCKEY</a></li>
                 <li><a href="#">TABLE TENNIS</a></li>
             </ul>
