--- a/pages/header.html
+++ b/pages/header.html
@@ -51,12 +51,13 @@
             content:  '';
             display: block;
             width: 0;
+            height: 2px;
             position: absolute;
             left:0;
             background-color: lightcoral    ;
-            transition: .3s
+            transition: .3s;
         }
-        .menu li a:hover::after{
+        #menu li a:hover::after{
             width: 100%;
         }
         span{
@@ -123,7 +124,7 @@
             
             <ul id = "menu">
                 <li><a href="#">HOME</a></li>
-                <li><a href="../cricket/cricket.html">CRICKET</a></li>
+                <li><a href = "./../cricket/cricket.html">CRICKET</a></li>
                 <li><a href="#">FOOTBALL</a></li>
                 <li><a href="#">HOCKEY</a></li>
                 <li><a href="#">TABLE TENNIS</a></li>
