--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ img {vertical-align: middle;}
         
             <ul class = "menu">
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">CRICKET</a></li>
+                <li><a href="./pages/cricket.html">CRICKET</a></li>
                 <li><a href="./football/football.html">FOOTBALL</a></li>
                 <li><a href="#">HOCKEY</a></li>
                 <li><a href="#">TABLE TENNIS</a></li>
