--- a/pages/header.html
+++ b/pages/header.html
@@ -64,7 +64,7 @@
             <ul class = "menu">
                 <li><a href="#">HOME</a></li>
                 <li><a href="../pages/cricket.html">CRICKET</a></li>
-                <li><a href="#">FOOTBALL</a></li>
+                <li><a href="../football/football.html">FOOTBALL</a></li>
                 <li><a href="#">HOCKEY</a></li>
                 <li><a href="#">TABLE TENNIS</a></li>
             </ul>
