link football.html and cricket.html

--- a/pages/header.html
+++ b/pages/header.html
@@ -124,13 +124,8 @@
             
             <ul id = "menu">
                 <li><a href="#">HOME</a></li>
-<<<<<<< HEAD
-                <li><a href="../pages/cricket.html">CRICKET</a></li>
+                <li><a href = "../cricket/cricket.html">CRICKET</a></li>
                 <li><a href="../football/football.html">FOOTBALL</a></li>
-=======
-                <li><a href = "./../cricket/cricket.html">CRICKET</a></li>
-                <li><a href="#">FOOTBALL</a></li>
->>>>>>> b5980f85f09bcb237eb8ffe6d5dbfa76e6577ea9
                 <li><a href="#">HOCKEY</a></li>
                 <li><a href="#">TABLE TENNIS</a></li>
                 <a href = "javascript:void(0);" class = "hide-btn" onclick="myFunction()"><i class = "fa fa-close"></i></a>
