--- a/cricket/cricket.html
+++ b/cricket/cricket.html
@@ -21,7 +21,7 @@
        <ul class="list">
            <li><a href="#">Domestic Matches</a></li>
            <li><a href="#">International Matches</a></li>
-           <li><a href="#">Trending <i class="fa fa-fire"></i></a></li>
+           <li><a href="#">Trending </a><i class="fa fa-fire"></i></li>
            <li><a href="#">News</a></li>
            <li><a href="#">LIVE Score</a></li>
        </ul>
@@ -37,26 +37,41 @@
    </div>
 
    <div class="feature">
+       <a href="#">
        <div class="div-1">
+
            <h1>Domestic Tournaments</h1>
            <p>Irani Cup, Deodhar Trophy, Vijay Hazare Trophy, Duleep Trophy, Ranji Trophy and many more. </p>
-       </div>
-       <div class="div-2">
-           <h1>International Tournaments</h1>
-           <p> ICC World Test Championship, the World Cup and the T20 World Cup and many more.</p>
-       </div>
-       <div class="div-3">
-           <h1>Trending around the World</h1>
-           <p>Indian Premiere League, Big Bash League, Carribean Premiere League and many more.</p>
-       </div>
-       <div class="div-4">
-           <h1>Cricket News</h1>
-           <p>Get notified about the latest stories about players and teams around the globe.</p>
-       </div>
-       <div class="div-5">
-           <h1>LIVE Scores</h1>
-           <p>Get LIVE scores of matches around the World.</p>
-       </div>
+        </div>
+    </a>
+
+    <a href="#">
+        <div class="div-2">
+            <h1>International Tournaments</h1>
+            <p> ICC World Test Championship, the World Cup and the T20 World Cup and many more.</p>
+        </div>
+    </a>
+
+    <a href="#">
+        <div class="div-3">
+            <h1>Trending around the World</h1>
+            <p>Indian Premiere League, Big Bash League, Carribean Premiere League and many more.</p>
+        </div>
+    </a>
+
+    <a href="#">
+        <div class="div-4">
+            <h1>Cricket News</h1>
+            <p>Get notified about the latest stories about players and teams around the globe.</p>
+        </div>
+    </a>
+
+    <a href="#">
+        <div class="div-5">
+            <h1>LIVE Scores</h1>
+            <p>Get LIVE scores of matches around the World.</p>
+        </div>
+    </a>
    </div>
 </body>
 </html>
