change link address

--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
             
         </script>
         </div>
+        <div class = "footer">
+            
+        </div>
       </div>
 </body>
 </html>
