Making footer and add functionality to index.html

--- a/pages/header.html
+++ b/pages/header.html
@@ -123,14 +123,9 @@
             <a href = "javascript:void(0);" onclick="myFunction()"><i class = "fa fa-bars" ></i></a>
             
             <ul id = "menu">
-                <li><a href="#">HOME</a></li>
-<<<<<<< HEAD
+                <li><a href=".">HOME</a></li>
                 <li><a href = "./cricket/cricket.html">CRICKET</a></li>
                 <li><a href="./football/football.html">FOOTBALL</a></li>
-=======
-                <li><a href = "../cricket/cricket.html">CRICKET</a></li>
-                <li><a href="../football/football.html">FOOTBALL</a></li>
->>>>>>> 867ed848566a9cb73ad1b8922ac835e4b45c7759
                 <li><a href="#">HOCKEY</a></li>
                 <li><a href="#">TABLE TENNIS</a></li>
                 <a href = "javascript:void(0);" class = "hide-btn" onclick="myFunction()"><i class = "fa fa-close"></i></a>
