--- a/pages/header.html
+++ b/pages/header.html
@@ -93,7 +93,7 @@
                 height: 600px;
                 display: flex;
                 flex-direction: column;
-                transition: .7s;
+                transition: 1s;
 
             }
             #menu li a{
@@ -109,9 +109,13 @@
                 display: block;;
             }
             .hide-btn{
+                display: block;
                 position: absolute;
                 right: 20px;
                 top: 10px;
+            }
+            .fa {
+                color: black;
             }
         }
     </style>
