--- a/hockey/hockey.html
+++ b/hockey/hockey.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/hockey/hockey.css" />
+    <link rel="stylesheet" href="./hockey.css" />
     <title>HOCKEY</title>
   </head>
   <body>
@@ -35,37 +35,37 @@
       <div class="teams-A">
         <div>
           <h2>INDIA</h2>
-          <a href="/hockey/teams/india.html"><img src="/images/hockey_india.jpg" alt="" /></a>
+          <a href="./teams/india.html"><img src="../images/hockey_india.jpg" alt="" /></a>
         </div>
         <div>
           <h2>CANADA</h2>
-          <a href="/hockey/teams/canada.html"><img src="/images/hockey_canada.jpg" alt="" /></a>
+          <a href="./teams/canada.html"><img src="../images/hockey_canada.jpg" alt="" /></a>
         </div>
         <div>
           <h2>AUSTRALIA</h2>
-          <a href="/hockey/teams/australia.html"><img src="/images/hockey_australia.jpg" alt="" /></a>
+          <a href="./teams/australia.html"><img src="../images/hockey_australia.jpg" alt="" /></a>
         </div>
         <div>
           <h2>BELGIUM</h2>
-          <a href="/hockey/teams/belgium.html"><img src="/images/hockey_belgium.jpg" alt="" /></a>
+          <a href="./teams/belgium.html"><img src="../images/hockey_belgium.jpg" alt="" /></a>
         </div>
       </div>
       <div class="teams-B">
         <div>
           <h2>GERMANY</h2>
-          <a href="/hockey/teams/germany.html"><img src="/images/hockey_germany.jpg" alt="" /></a>
+          <a href="./teams/germany.html"><img src="../images/hockey_germany.jpg" alt="" /></a>
         </div>
         <div>
           <h2>GREAT BRITAIN</h2>
-          <a href="/hockey/teams/greatbritain.html"><img src="/images/hockey_greatbritain.jpg" alt="" /></a>
+          <a href="./teams/greatbritain.html"><img src="../images/hockey_greatbritain.jpg" alt="" /></a>
         </div>
         <div>
           <h2>SOUTH AFRICA</h2>
-          <a href="/hockey/teams/southafrica.html"><img src="/images/hockey_southafrica.jpg" alt="" /></a>
+          <a href="./teams/southafrica.html"><img src="../images/hockey_southafrica.jpg" alt="" /></a>
         </div>
         <div>
           <h2>ARGENTINA</h2>
-          <a href="/hockey/teams/argentina.html"><img src="/images/hockey_argentina.jpg" alt="" /></a>
+          <a href="./teams/argentina.html"><img src="../images/hockey_argentina.jpg" alt="" /></a>
         </div>
       </div>
     </div>
@@ -80,8 +80,8 @@
       SCHEDULE
     </h1>
     <div id="schedule">
-      <img src="/images/schedul1-1.png" alt="" />
-      <img src="/images/schedule-2.png" alt="" />
+      <img src="../images/schedul1-1.png" alt="" />
+      <img src="../images/schedule-2.png" alt="" />
     </div>
     <h1
       style="
@@ -94,9 +94,9 @@
       OLYMPICS
     </h1>
     <div id="olympics">
-      <img src="/images/hockey_olympics.webp" alt="" />
-      <img src="/images/olympics_pointstable.png" alt="">
-      <img src="/images/olympics_qsf.png" alt="">
+      <img src="../images/hockey_olympics.webp" alt="" />
+      <img src="../images/olympics_pointstable.png" alt="">
+      <img src="../images/olympics_qsf.png" alt="">
     </div>
     <h1
       style="
@@ -136,8 +136,8 @@
       NEWS
     </h1>
     <div id="news">
-      <img src="/images/hockey_n1.png" alt="">
-      <img src="/images/hockey_n2.png" alt="">
+      <img src="../images/hockey_n1.png" alt="">
+      <img src="../images/hockey_n2.png" alt="">
     </div>
   </body>
 </html>
