--- a/pages/header.html
+++ b/pages/header.html
@@ -130,7 +130,7 @@
                 <li><a href=".">HOME</a></li>
                 <li><a href = "./cricket/cricket.html">CRICKET</a></li>
                 <li><a href="./football/football.html">FOOTBALL</a></li>
-                <li><a href="#">HOCKEY</a></li>
+                <li><a href="./hockey/hockey.html">HOCKEY</a></li>
                 <li><a href="#">TABLE TENNIS</a></li>
                 <a href = "javascript:void(0);" class = "hide-btn" onclick="myFunction()"><i class = "fa fa-close"></i></a>
             </ul>
