--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
           <h1>MEET OUR TEAM</h1>
           <div id = "team">
             <div class="circle"><img src = "images/chirag.jpeg"/></div>
-            <div class="circle"><img src = "images/chirag.jpeg"/></div>
-            <div class="circle"><img src = "images/chirag.jpeg"/></div>
-            <div class="circle"><img src = "images/chirag.jpeg"/></div>
+            <div class="circle"><img src = "images/krishna.jpg"/></div>
+            <div class="circle"><img src = "images/my1.jpg"/></div>
+            <div class="circle"><img src = "images/Manish.jpeg"/></div>
         </div>
         <div id = "footer"></div>
         
