--- a/football/football.html
+++ b/football/football.html
@@ -91,11 +91,28 @@
         flex-direction: column;
       }
       .box{
+        justify-content: center;
         height: 150px;
-        width: 250px;
-        border: 2px solid yellow;
+        width: 260px;
+        border: 2px solid white;
         border-radius: 10px;
-        background-color: gray;
+        background-color:azure;
+      }
+      .box img{
+        height: 25px;
+        width: 25px;
+        /* margin: 5px;
+        padding: 5px; */
+      }
+      .box p{
+        padding: 5px;
+      }
+      .boxContent p span{
+        font-size: 25px;
+        text-align: center;
+      }
+      .boxContent{
+        justify-content: center;
       }
       .content1{
         margin-top: 20px;
@@ -150,13 +167,31 @@
         </div>
         </div>
       </div>
+      <div style="margin-left: 20px;"><span style="font-weight: bold; font-size: 25px;"> Top Scores And Fixtures </span></div>
       <div class="content1">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+      <div class="box">
+        <div class="boxContent"><p><img src="./fimage/soudi arabia.png" alt=""><span>Saudi Arabia</span></p></div>
+        <div class="boxContent"><p><img src="./fimage/china.png" alt=""><span>China</span></p></div>
+        <p>2022 World Cup Qualifying-AFC</p>
+      </div>
+      <div class="box">
+        <div class="boxContent"><p><img src="./fimage/japan.png" alt=""><span>Japan</span></p></div>
+        <div class="boxContent"><p><img src="./fimage/australia.png" alt=""><span>Australia</span></p></div>
+        <p>2022 World Cup Qualifying-AFC</p>
+      </div>
+      <div class="box">
+        <div class="boxContent"><p><img src="./fimage/iran.png" alt=""><span>Iran</span></p></div>
+        <div class="boxContent"><p><img src="./fimage/south korea.png" alt=""><span>South Korea</span></p></div>
+        <p>2022 World Cup Qualifying-AFC</p>
+      </div>
+      <div class="box">
+        <div class="boxContent"><p><img src="./fimage/england.png" alt=""><span>england</span></p></div>
+        <div class="boxContent"><p><img src="./fimage/hangary.png" alt=""><span>Hungary</span></p></div>
+        <p>2022 World Cup Qualifying-UEFA</p>
+      </div>
     </div>
-    <script src="script.js"></script>
+    <div class="football"></div>
+    <script src="football.js"></script>
       </div>
       <div class="footer"></div>
     </div>
