football page is updated

--- a/football/football.html
+++ b/football/football.html
@@ -168,8 +168,7 @@
       <div class="header">
         <ul class="menu">
           <li><a href="#">Football</a></li>
-          <li><a href="#">Scores</a></li>
-          <li><a href="#">Fixtures</a></li>
+          <li><a href="#">Scores&Fixtures</a></li>
           <li><a href="#">Tables</a></li>
           <li><a href="#">Top Scores</a></li>
           <li><a href="./team.html">Teams</a></li>
