--- a/pages/footer.html
+++ b/pages/footer.html
@@ -25,7 +25,7 @@ span{
 
 footer{
     width: 100%;
-    background-color: #6a6c75;
+    background-color: gainsboro;
 
 }
 
@@ -41,8 +41,7 @@ footer{
 
 .about h2{
     font-size: 20px;
-    font-weight: 100;
-    color: lightgray;
+    color: gray;
     text-transform: uppercase;
 }
 
@@ -69,17 +68,17 @@ a :hover{
 .link1 h2{
     font-size: 20px;
     text-transform: uppercase;
-    color: lightgray;
+    color: gray;
 }
 .link2 h2{
     font-size: 20px;
     text-transform: uppercase;
-    color: lightgray;
+    color: gray;
 }
 .link3 h2{
     font-size: 20px;
     text-transform: uppercase;
-    color: lightgray;
+    color: gray;
 }
 span{
     color: grey;
