--- a/pages/header.html
+++ b/pages/header.html
@@ -63,7 +63,7 @@
         }
         span{
             font-size: 40px; 
-            font-weight: bolder; 
+            font-weight: 900; 
             color:black;
         }
         .header a i{
@@ -191,7 +191,6 @@
             100%{
                 transform: rotate(360deg);
             }
-
         }
     </style>
 </head>
@@ -203,7 +202,7 @@
             
             <ul id = "menu">
                 <li><a href=".">HOME</a></li>
-                <li class="cricket"><a href = "./../cricket/cricket.html">CRICKET</a>
+                <li class="cricket"><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/cricket/cricket.html">CRICKET</a>
                     <ul class="cricket-dropdown">
                         <li><a href="#">Domestic Matches</a></li>
                         <li><a href="#">International Matches</a></li>
@@ -212,7 +211,7 @@
                         <li><a href="#">LIVE Score</a></li>
                     </ul>
                 </li>
-                <li class = "football"><a href="./../football/football.html">FOOTBALL</a>
+                <li class = "football"><a href="https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/football/football.html">FOOTBALL</a>
                     <ul class= "football-dropdown">
                         <li><a href = "#">Football</a></li>
                         <li><a href = "#">Scores</a></li>
@@ -222,7 +221,7 @@
                         <li><a href = "#">Teams</a></li>
                     </ul>
                 </li>
-                <li class = "hockey"><a href="./../hockey/hockey.html">HOCKEY</a>
+                <li class = "hockey"><a href="https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/hockey/hockey.html">HOCKEY</a>
                     <ul class= "hockey-dropdown">
                         <li><a href = "#">Home</a></li>
                         <li><a href = "#">Team</a></li>
