--- a/pages/header.html
+++ b/pages/header.html
@@ -21,7 +21,7 @@
             justify-content: space-between;
             align-items: center;
         }
-        p{
+        .para{
             font-size: 40px; 
             display: inline-block; 
             font-weight:900; 
@@ -60,7 +60,7 @@
         #menu li a:hover::after{
             width: 100%;
         }
-        span{
+        .para span{
             font-size: 40px; 
             font-weight: 900; 
             color:black;
@@ -70,11 +70,11 @@
             font-size: 30px;
         }
         @media only screen and (max-width: 1000px){
-            p{
+            .para{
                 font-size: 25px;
 
             }
-            span{
+            .para span{
                 font-size: 25px;
             }
             #menu li a{
@@ -147,7 +147,7 @@
 </head>
 <body>
         <div class = "header">
-            <p>SP<i class = "fa fa-futbol-o" style="color:lightcoral;"></i>RTS <span>EYE</span></p>
+            <p class="para">SP<i class = "fa fa-futbol-o" style="color:lightcoral;"></i>RTS <span>EYE</span></p>
             
             <a href = "javascript:void(0);" onclick="myFunction()"><i class = "fa fa-bars" ></i></a>
             
