--- a/pages/footer.html
+++ b/pages/footer.html
@@ -531,7 +531,7 @@ hr{
 </head>
 <body>
     <section class = "main">
-        Content Area
+        Explore About SportsEye
     </section>
     <footer>
         <section class = "sec-1">
