--- a/pages/header.html
+++ b/pages/header.html
@@ -213,12 +213,10 @@
                 </li>
                 <li class = "football"><a href="https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/football/football.html">FOOTBALL</a>
                     <ul class= "football-dropdown">
-                        <li><a href = "#">Football</a></li>
-                        <li><a href = "#">Scores</a></li>
-                        <li><a href = "#">Fixtures</a></li>
-                        <li><a href = "#">Tables</a></li>
-                        <li><a href = "#">Top Scores</a></li>
-                        <li><a href = "#">Teams</a></li>
+                        <li><a href = "../football/football.html">Football</a></li>
+                        <li><a href = "#">Scores&Fixtures</a></li>
+                        <li><a href = "../football/tables.html">Tables</a></li>
+                        <li><a href = "../football/team.html">Teams</a></li>
                     </ul>
                 </li>
                 <li class = "hockey"><a href="https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/hockey/hockey.html">HOCKEY</a>
