--- a/cricket/cricket.html
+++ b/cricket/cricket.html
@@ -85,6 +85,29 @@
    <div class="matches">
     <div class="trending">
         <h1>Trending now</h1>
+
+        <div class="matchbox">
+            <div class="box-1">
+                <p class="upper1">NAM  132-8(20)</p>
+                <p class="upper2">IND  136-1(15.2)</p>
+                <p class="lower">India won by 9 wickets</p>
+            </div>
+            <div class="box-2">
+                <p class="upper1">NAM  132-8(20)</p>
+                <p class="upper2">IND  136-1(15.2)</p>
+                <p class="lower">India won by 9 wickets</p>
+            </div>
+            <div class="box-3">
+                <p class="upper1">NAM  132-8(20)</p>
+                <p class="upper2">IND  136-1(15.2)</p>
+                <p class="lower">India won by 9 wickets</p>
+            </div>
+            <div class="box-4">
+                <p class="upper1">NAM  132-8(20)</p>
+                <p class="upper2">IND  136-1(15.2)</p>
+                <p class="lower">India won by 9 wickets</p>
+            </div>
+        </div>
         
     </div>
     
