--- a/pages/footer.html
+++ b/pages/footer.html
@@ -529,9 +529,7 @@ hr{
     </style>
 </head>
 <body>
-    <section class = "main">
-        Explore About SportsEye
-    </section>
+    <section class = "main">Explore About SportsEye</section>
     <footer>
         <section class = "sec-1">
             <section class = about>
