--- a/football/football.html
+++ b/football/football.html
@@ -175,7 +175,7 @@
   <body id="container1">
     <div id="header" style="width: 100%;"></div>
     <!-- <div class="container"> -->
-      <div class="subheader">
+      <!-- <div class="subheader">
         <ul class="menu">
           <li><a href="#">Football</a></li>
           <li><a href="#content1">Scores&Fixtures</a></li>
@@ -183,7 +183,7 @@
           <!-- <li><a href=".content1">Top Scores</a></li> -->
           <li><a href="./team.html">Teams</a></li>
         </ul>
-      </div>
+      </div> -->
       <div class="wcontent">
       <div class="content">
         <div class="left">
