--- a/football/football.html
+++ b/football/football.html
@@ -181,7 +181,7 @@
           <li><a href="#content1">Scores&Fixtures</a></li>
           <li><a href="./tables.html">Tables</a></li>
           <!-- <li><a href=".content1">Top Scores</a></li> -->
-          <li><a href="./team.html">Teams</a></li>
+          <!-- <li><a href="./team.html">Teams</a></li>
         </ul>
       </div> -->
       <div class="wcontent">
