--- a/football/team.html
+++ b/football/team.html
@@ -51,7 +51,7 @@
     </style>
 </head>
 <body id="container">
-    <div id="header" style="width: 100%;"></div>
+    <div id="header" style="width: 100%;position: fixed;"></div>
     <ol>
         <div class="allTeam">
             <h1>All Teams</h1>
