--- a/football/tables.html
+++ b/football/tables.html
@@ -38,7 +38,7 @@
     </style>
 </head>
 <body id="container">
-    <div id="header"></div>
+    <div id="header" style="position: fixed;"></div>
     <div><h1>Premier League Table</h1></div>
     <div class="leagueTable">
         <table>
