--- a/pages/header.html
+++ b/pages/header.html
@@ -214,7 +214,7 @@
                 <li class = "football"><a href="https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/football/football.html">FOOTBALL</a>
                     <ul class= "football-dropdown">
                         <li><a href = "../football/football.html">Football</a></li>
-                        <li><a href = "#">Scores&Fixtures</a></li>
+                        <li><a href = "../football/football.html#content1">Scores&Fixtures</a></li>
                         <li><a href = "../football/tables.html">Tables</a></li>
                         <li><a href = "../football/team.html">Teams</a></li>
                     </ul>
