adding link to home page

--- a/pages/header.html
+++ b/pages/header.html
@@ -201,7 +201,7 @@
             <a href = "javascript:void(0);" onclick="myFunction()"><i class = "fa fa-bars" ></i></a>
             
             <ul id = "menu">
-                <li><a href=".">HOME</a></li>
+                <li><a href="https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/">HOME</a></li>
                 <li class="cricket"><a href = "https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/cricket/cricket.html">CRICKET</a>
                     <ul class="cricket-dropdown">
                         <li><a href="#">Domestic Matches</a></li>
