--- a/pages/header.html
+++ b/pages/header.html
@@ -219,7 +219,7 @@
                         <li><a href = "../football/team.html">Teams</a></li>
                     </ul>
                 </li>
-                <li class = "hockey"><a href="./../hockey/hockey.html">HOCKEY</a>
+                <li class = "hockey"><a href="https://fullstack-project-team.github.io/SPORTS-EYE-FULL-STACK-PROJECT/hockey/hockey.html">HOCKEY</a>
                     <ul class= "hockey-dropdown">
                         <li><a href = "#">Home</a></li>
                         <li><a href = "#">Team</a></li>
