--- a/hockey/hockey.html
+++ b/hockey/hockey.html
@@ -19,7 +19,7 @@
   <body>
     <div id = "header"></div>
     <div class="home">
-      <img src="/images/hockey_home.jpg" alt="" />
+      <img src="../images/hockey_home.jpg" alt="" />
     </div>
     <h1
       style="
