--- a/football/tables.html
+++ b/football/tables.html
@@ -1,72 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <title>Tables - Football - SPORTSEYE</title>
-    <script> 
-        $(function(){
-          $("#header").load("../pages/header.html"); 
-        });
-        $(function(){
-          $("#footer").load("../pages/footer.html")
-        });
-        </script>
+    <script>
+      $(function () {
+        $("#header").load("../pages/header.html");
+      });
+      $(function () {
+        $("#footer").load("../pages/footer.html");
+      });
+    </script>
     <style>
-        #container{
-            display: flex;
-            flex-wrap: wrap;
-            flex-direction: column;
-        }
-        table{
-            width: 80%;
-            border-collapse: collapse;
-        }
-        tr{
-            border-bottom: 1px solid gray;
-            height: 30px;
-        }
-        th{
-            text-align: left;
-            /* border: 1px solid gray; */
-        }
-        td{
-            /* border: 1px solid gray; */
-        }
+      #container {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        background-color: gainsboro;
+        padding: 20px;
+      }
+      table {
+        width: 80%;
+        border-collapse: collapse;
+      }
+      tr {
+        border-bottom: 1px solid gray;
+        height: 30px;
+      }
+      th {
+        text-align: left;
+        /* border: 1px solid gray; */
+      }
+      td {
+        /* border: 1px solid gray; */
+      }
+      .leagueTable {
+        padding: 20px;
+      }
     </style>
-</head>
-<body id="container">
+  </head>
+  <body id="container">
     <div id="header"></div>
-    <div><h1>Premier League Table</h1></div>
+    <div><h1 style="padding: 20px">Premier League Table</h1></div>
     <div class="leagueTable">
-        <table>
-            <tr><th>#</th><th>Team</th><th>Played</th><th>Won</th><th>Drawn</th><th>Lost</th><th>Points</th></tr>
-            <tr><td>1</td><td>Chelsea</td><td>11</td><td>8</td><td>2</td><td>1</td><td>26</td></tr>
-            <tr><td>2</td><td>Manchester City</td><td>11</td><td>7</td><td>2</td><td>2</td><td>23</td></tr>
-            <tr><td>3</td><td>West Ham United</td><td>11</td><td>7</td><td>2</td><td>2</td><td>23</td></tr>
-            <tr><td>4</td><td>Liverpool</td><td>11</td><td>6</td><td>4</td><td>1</td><td>22</td></tr>
-            <tr><td>5</td><td>Aresnal</td><td>11</td><td>6</td><td>2</td><td>3</td><td>20</td></tr>
-            <tr><td>6</td><td>Manchester United</td><td>11</td><td>5</td><td>2</td><td>4</td><td>17</td></tr>
-            <tr><td>7</td><td>Brigton & Hove Albion</td><td>11</td><td>4</td><td>5</td><td>2</td><td>17</td></tr>
-            <tr><td>8</td><td>Wolverhampton Wanderes</td><td>11</td><td>5</td><td>1</td><td>5</td><td>16</td></tr>
-            <tr><td>9</td><td>Tottenham Hotspur</td><td>11</td><td>5</td><td>1</td><td>5</td><td>16</td></tr>
-            <tr><td>10</td><td>Crystal Palace</td><td>11</td><td>3</td><td>6</td><td>2</td><td>15</td></tr>
-            <tr><td>11</td><td>Everton</td><td>11</td><td>4</td><td>3</td><td>4</td><td>15</td></tr>
-            <tr><td>12</td><td>Leicester City</td><td>11</td><td>4</td><td>3</td><td>4</td><td>15</td></tr>
-            <tr><td>13</td><td>Southampton</td><td>11</td><td>3</td><td>5</td><td>3</td><td>14</td></tr>
-            <tr><td>14</td><td>Brentford</td><td>11</td><td>3</td><td>3</td><td>5</td><td>12</td></tr>
-            <tr><td>15</td><td>Leeds United</td><td>11</td><td>2</td><td>5</td><td>4</td><td>11</td></tr>
-            <tr><td>16</td><td>Aston Villa</td><td>11</td><td>3</td><td>1</td><td>7</td><td>10</td></tr>
-            <tr><td>17</td><td>Watford</td><td>11</td><td>3</td><td>1</td><td>7</td><td>10</td></tr>
-            <tr><td>18</td><td>Burnley</td><td>11</td><td>1</td><td>5</td><td>5</td><td>8</td></tr>
-            <tr><td>19</td><td>Newcastle United</td><td>11</td><td>0</td><td>5</td><td>6</td><td>5</td></tr>
-            <tr><td>20</td><td>Norwich City</td><td>11</td><td>1</td><td>2</td><td>8</td><td>5</td></tr>
-        </table>
-        <a href="../pages/header.html"></a>
+      <table>
+        <tr>
+          <th>#</th>
+          <th>Team</th>
+          <th>Played</th>
+          <th>Won</th>
+          <th>Drawn</th>
+          <th>Lost</th>
+          <th>Points</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Chelsea</td>
+          <td>11</td>
+          <td>8</td>
+          <td>2</td>
+          <td>1</td>
+          <td>26</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Manchester City</td>
+          <td>11</td>
+          <td>7</td>
+          <td>2</td>
+          <td>2</td>
+          <td>23</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>West Ham United</td>
+          <td>11</td>
+          <td>7</td>
+          <td>2</td>
+          <td>2</td>
+          <td>23</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Liverpool</td>
+          <td>11</td>
+          <td>6</td>
+          <td>4</td>
+          <td>1</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Aresnal</td>
+          <td>11</td>
+          <td>6</td>
+          <td>2</td>
+          <td>3</td>
+          <td>20</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>Manchester United</td>
+          <td>11</td>
+          <td>5</td>
+          <td>2</td>
+          <td>4</td>
+          <td>17</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>Brigton & Hove Albion</td>
+          <td>11</td>
+          <td>4</td>
+          <td>5</td>
+          <td>2</td>
+          <td>17</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>Wolverhampton Wanderes</td>
+          <td>11</td>
+          <td>5</td>
+          <td>1</td>
+          <td>5</td>
+          <td>16</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>Tottenham Hotspur</td>
+          <td>11</td>
+          <td>5</td>
+          <td>1</td>
+          <td>5</td>
+          <td>16</td>
+        </tr>
+        <tr>
+          <td>10</td>
+          <td>Crystal Palace</td>
+          <td>11</td>
+          <td>3</td>
+          <td>6</td>
+          <td>2</td>
+          <td>15</td>
+        </tr>
+        <tr>
+          <td>11</td>
+          <td>Everton</td>
+          <td>11</td>
+          <td>4</td>
+          <td>3</td>
+          <td>4</td>
+          <td>15</td>
+        </tr>
+        <tr>
+          <td>12</td>
+          <td>Leicester City</td>
+          <td>11</td>
+          <td>4</td>
+          <td>3</td>
+          <td>4</td>
+          <td>15</td>
+        </tr>
+        <tr>
+          <td>13</td>
+          <td>Southampton</td>
+          <td>11</td>
+          <td>3</td>
+          <td>5</td>
+          <td>3</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>14</td>
+          <td>Brentford</td>
+          <td>11</td>
+          <td>3</td>
+          <td>3</td>
+          <td>5</td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td>15</td>
+          <td>Leeds United</td>
+          <td>11</td>
+          <td>2</td>
+          <td>5</td>
+          <td>4</td>
+          <td>11</td>
+        </tr>
+        <tr>
+          <td>16</td>
+          <td>Aston Villa</td>
+          <td>11</td>
+          <td>3</td>
+          <td>1</td>
+          <td>7</td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>17</td>
+          <td>Watford</td>
+          <td>11</td>
+          <td>3</td>
+          <td>1</td>
+          <td>7</td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>18</td>
+          <td>Burnley</td>
+          <td>11</td>
+          <td>1</td>
+          <td>5</td>
+          <td>5</td>
+          <td>8</td>
+        </tr>
+        <tr>
+          <td>19</td>
+          <td>Newcastle United</td>
+          <td>11</td>
+          <td>0</td>
+          <td>5</td>
+          <td>6</td>
+          <td>5</td>
+        </tr>
+        <tr>
+          <td>20</td>
+          <td>Norwich City</td>
+          <td>11</td>
+          <td>1</td>
+          <td>2</td>
+          <td>8</td>
+          <td>5</td>
+        </tr>
+      </table>
+      <a href="../pages/header.html"></a>
     </div>
     <p>Last updated 8th November 2021 at 12:20</p>
     <div id="footer"></div>
-</body>
+  </body>
 </html>
