--- a/football/team.html
+++ b/football/team.html
@@ -1,133 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <title>Teams - Football - SPORTSEYE</title>
-    <script> 
-        $(function(){
-          $("#header").load("../pages/header.html"); 
-        });
-        $(function(){
-          $("#footer").load("../pages/footer.html")
-        });
-        </script>
+    <script>
+      $(function () {
+        $("#header").load("../pages/header.html");
+      });
+      $(function () {
+        $("#footer").load("../pages/footer.html");
+      });
+    </script>
     <style>
-        #container{
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .allTeam{
-            margin-left: 20px;
-        }
-        .name1{
-            font-weight: bold;
-            font-size: 20px;
-            margin-bottom: 5px;
-            padding: 20px;
-            margin-left: 50px;
-        }
-        .name{
-            font-weight: bold;
-            font-size: 20px;
-            margin-top: 10px;
-            margin-bottom: 5px;
-            padding: 20px;
-            margin-left: 50px;
-        }
-        table{
-            width: 80%;
-            /* border-bottom: 1px solid gray; */
-        }
-        td{
-            border-bottom: 1px solid gray;
-        }
-        img{
-            margin-left: 200px;
-            width: 85%;
-        }
+      #container {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 20px;
+        background-color: gainsboro;
+        /* background-image: url("fimage/wallpaper2you_3.jpg"); */
+        /* color: white; */
+      }
+      .allTeam {
+        margin-left: 20px;
+        padding: 10px;
+      }
+      .international {
+        margin-top: 10px;
+        padding: 10px;
+        margin-left: 10px;
+      }
+      .premier {
+        margin-top: 10px;
+        padding: 10px;
+        margin-left: 10px;
+      }
+      .scottish {
+        margin-top: 10px;
+        padding: 10px;
+        margin-left: 10px;
+      }
+      .name1 {
+        font-weight: bold;
+        font-size: 20px;
+        margin-bottom: 5px;
+        padding: 20px;
+        margin-left: 50px;
+      }
+      .name {
+        font-weight: bold;
+        font-size: 20px;
+        margin-top: 10px;
+        margin-bottom: 5px;
+        padding: 20px;
+        margin-left: 50px;
+      }
+      table {
+        width: 80%;
+        /* border-bottom: 1px solid gray; */
+      }
+      td {
+        border-bottom: 1px solid gray;
+      }
+      img {
+        margin-left: 200px;
+        width: 85%;
+      }
     </style>
-</head>
-<body id="container">
-    <div id="header" style="width: 100%;"></div>
+  </head>
+  <body id="container">
+    <div id="header" style="width: 100%"></div>
     <ol>
-        <div class="allTeam">
-            <h1>All Teams</h1>
-            <h2>International</h2>
-            <div class="international">
-                <table>
-                    <tr><td>England</td><td>Scotland</td></tr>
-                    <tr><td>Northern Ireland</td><td>Wales</td></tr>
-                    <tr><td>Republic of Ireland</td><td></td></tr>
-                </table>
-            </div>
-            <h2>Premier League</h2>
-            <div class="premier">
-                <table>
-                    <tr><td>Arsenal</td><td>Everton</td><td>Norwich City</td></tr>
-                    <tr><td>Aston Villa</td><td>Leeds United</td><td> Southampton</td></tr>
-                    <tr><td>Brentford</td><td>Leicester City</td><td>watford</td></tr>
-                    <tr><td>Brighton & Hove Albion</td><td>Liverpool</td><td>Tottenham Hotspur</td></tr>
-                    <tr><td>Burnley</td><td>Manchester City</td><td>West Ham United</td></tr>
-                    <tr><td>Chelsea</td><td>Manchester United</td><td>NoWolverhampton Wanderersrwic</td></tr>
-                </table>
-            </div>
-            <h2>Scottish Premiership</h2>
-            <div class="scottish">
-                <table>
-                    <tr><td>Aberdeen</td><td>Heart of Midlothian</td><td>Rangers</td></tr>
-                    <tr><td>Celtic</td><td>Hibernian</td><td>Ross County</td></tr>
-                    <tr><td>Dundee</td><td>Livingstone</td><td>St Johnstone</td></tr>
-                    <tr><td>Dundee United</td><td>Motherwell</td><td>St Mirren</td></tr>
-                </table>
-            </div>
-            
+      <div class="allTeam">
+        <h1 style="padding: 5px">All Teams</h1>
+        <h2 style="padding: 5px">International</h2>
+        <div class="international">
+          <table>
+            <tr>
+              <td>England</td>
+              <td>Scotland</td>
+            </tr>
+            <tr>
+              <td>Northern Ireland</td>
+              <td>Wales</td>
+            </tr>
+            <tr>
+              <td>Republic of Ireland</td>
+              <td></td>
+            </tr>
+          </table>
         </div>
-        <h1>Top 20 Teams According To Their Followers</h1>
-        
-    <li class="name1">Real Madrid C.F. — 201.9 million followers</li>
-    <img src="./fimage/teams/1-Real-Madrid-C-F-201-9-million-followers.webp" alt="">
-    <li class="name">FC Barcelona — 190.4 million followers</li>
-    <img src="./fimage/teams/2-FC-Barcelona-190-4-million-followers.webp" alt="">
-    <li class="name">Manchester United — 114.8 million followers</li>
-    <img src="./fimage/teams/3-Manchester-United-114-8-million-followers.webp" alt="">
-    <li class="name">Chelsea FC — 72.2 million followers</li>
-    <img src="./fimage/teams/4-Chelsea-FC-72-2-million-followers.webp" alt="">
-    <li class="name">Bayern Munich — 65.7 million followers</li>
-    <img src="./fimage/teams/5-Bayern-Munich-65-7-million-followers.webp" alt="">
-    <li class="name">Arsenal FC — 63.3 million followers</li>
-    <img src="./fimage/teams/6-Arsenal-FC-63-3-million-followers.webp" alt="">
-    <li class="name">Paris Saint-Germain — 55.8 million followers</li>
-    <img src="./fimage/teams/7-Paris-Saint-Germain-55-8-million-followers.webp" alt="">
-    <li class="name">Juventus — 55.1 million followers</li>
-    <img src="./fimage/teams/8-Juventus-55-1-million-followers.webp" alt="">
-    <li class="name">Liverpool FC — 51 million followers</li>
-    <img src="./fimage/teams/9-Liverpool-FC-51-million-followers.webp" alt="">
-    <li class="name">Manchester City — 49.3 million followers</li>
-    <img src="./fimage/teams/10-Manchester-City-49-3-million-followers.webp" alt="">
-    <li class="name">Borussia Dortmund — 23.9 million followers</li>
-    <img src="./fimage/teams/11-Borussia-Dortmund-23-9-million-followers.webp" alt="">
-    <li class="name">Atlético Madrid — 22.7 million followers</li>
-    <img src="./fimage/teams/12-Atltico-Madrid-22-7-million-followers.webp" alt="">
-    <li class="name">Tottenham Hostpur — 15.5 million followers</li>
-    <img src="./fimage/teams/13-Tottenham-Hostpur-15-5-million-followers.webp" alt="">
-    <li class="name">Inter Milan — 13.8 million followers</li>
-    <img src="./fimage/teams/14-Inter-Milan-13-8-million-followers.webp" alt="">
-    <li class="name">Leicester City — 9.7 million followers</li>
-    <img src="./fimage/teams/15-Leicester-City-9-7-million-followers.webp" alt="">
-    <li class="name">Napoli — 6.5 million followers</li>
-    <img src="./fimage/teams/16-Napoli-6-5-million-followers.webp" alt="">
-    <li class="name">Everton FC — 5.4 million followers</li>
-    <img src="./fimage/teams/17-Everton-FC-5-4-million-followers.webp" alt="">
-    <li class="name">Southampton FC — 4.5 million followers</li>
-    <img src="./fimage/teams/18-Southampton-FC-4-5-million-followers.webp" alt="">
-    <li class="name">West Ham United — 4.3 million followers</li>
-    <img src="./fimage/teams/19-West-Ham-United-4-3-million-followers.webp" alt="">
-    <li class="name">Schalke 04 — 4.1 million followers</li>
-    <img src="./fimage/teams/20-Schalke-04-4-1-million-followers.webp" alt="">
+        <h2 style="padding: 5px">Premier League</h2>
+        <div class="premier">
+          <table>
+            <tr>
+              <td>Arsenal</td>
+              <td>Everton</td>
+              <td>Norwich City</td>
+            </tr>
+            <tr>
+              <td>Aston Villa</td>
+              <td>Leeds United</td>
+              <td>Southampton</td>
+            </tr>
+            <tr>
+              <td>Brentford</td>
+              <td>Leicester City</td>
+              <td>watford</td>
+            </tr>
+            <tr>
+              <td>Brighton & Hove Albion</td>
+              <td>Liverpool</td>
+              <td>Tottenham Hotspur</td>
+            </tr>
+            <tr>
+              <td>Burnley</td>
+              <td>Manchester City</td>
+              <td>West Ham United</td>
+            </tr>
+            <tr>
+              <td>Chelsea</td>
+              <td>Manchester United</td>
+              <td>NoWolverhampton Wanderersrwic</td>
+            </tr>
+          </table>
+        </div>
+        <h2 style="padding: 5px">Scottish Premiership</h2>
+        <div class="scottish">
+          <table>
+            <tr>
+              <td>Aberdeen</td>
+              <td>Heart of Midlothian</td>
+              <td>Rangers</td>
+            </tr>
+            <tr>
+              <td>Celtic</td>
+              <td>Hibernian</td>
+              <td>Ross County</td>
+            </tr>
+            <tr>
+              <td>Dundee</td>
+              <td>Livingstone</td>
+              <td>St Johnstone</td>
+            </tr>
+            <tr>
+              <td>Dundee United</td>
+              <td>Motherwell</td>
+              <td>St Mirren</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <h1 style="padding: 5px; margin-left: 20px">
+        Top 20 Teams According To Their Followers
+      </h1>
+
+      <li class="name1">Real Madrid C.F. — 201.9 million followers</li>
+      <img
+        src="./fimage/teams/1-Real-Madrid-C-F-201-9-million-followers.webp"
+        alt=""
+      />
+      <li class="name">FC Barcelona — 190.4 million followers</li>
+      <img
+        src="./fimage/teams/2-FC-Barcelona-190-4-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Manchester United — 114.8 million followers</li>
+      <img
+        src="./fimage/teams/3-Manchester-United-114-8-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Chelsea FC — 72.2 million followers</li>
+      <img
+        src="./fimage/teams/4-Chelsea-FC-72-2-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Bayern Munich — 65.7 million followers</li>
+      <img
+        src="./fimage/teams/5-Bayern-Munich-65-7-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Arsenal FC — 63.3 million followers</li>
+      <img
+        src="./fimage/teams/6-Arsenal-FC-63-3-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Paris Saint-Germain — 55.8 million followers</li>
+      <img
+        src="./fimage/teams/7-Paris-Saint-Germain-55-8-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Juventus — 55.1 million followers</li>
+      <img src="./fimage/teams/8-Juventus-55-1-million-followers.webp" alt="" />
+      <li class="name">Liverpool FC — 51 million followers</li>
+      <img
+        src="./fimage/teams/9-Liverpool-FC-51-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Manchester City — 49.3 million followers</li>
+      <img
+        src="./fimage/teams/10-Manchester-City-49-3-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Borussia Dortmund — 23.9 million followers</li>
+      <img
+        src="./fimage/teams/11-Borussia-Dortmund-23-9-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Atlético Madrid — 22.7 million followers</li>
+      <img
+        src="./fimage/teams/12-Atltico-Madrid-22-7-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Tottenham Hostpur — 15.5 million followers</li>
+      <img
+        src="./fimage/teams/13-Tottenham-Hostpur-15-5-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Inter Milan — 13.8 million followers</li>
+      <img
+        src="./fimage/teams/14-Inter-Milan-13-8-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Leicester City — 9.7 million followers</li>
+      <img
+        src="./fimage/teams/15-Leicester-City-9-7-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Napoli — 6.5 million followers</li>
+      <img src="./fimage/teams/16-Napoli-6-5-million-followers.webp" alt="" />
+      <li class="name">Everton FC — 5.4 million followers</li>
+      <img
+        src="./fimage/teams/17-Everton-FC-5-4-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Southampton FC — 4.5 million followers</li>
+      <img
+        src="./fimage/teams/18-Southampton-FC-4-5-million-followers.webp"
+        alt=""
+      />
+      <li class="name">West Ham United — 4.3 million followers</li>
+      <img
+        src="./fimage/teams/19-West-Ham-United-4-3-million-followers.webp"
+        alt=""
+      />
+      <li class="name">Schalke 04 — 4.1 million followers</li>
+      <img
+        src="./fimage/teams/20-Schalke-04-4-1-million-followers.webp"
+        alt=""
+      />
     </ol>
     <div id="footer"></div>
-</body>
+  </body>
 </html>
